# MongoDB_mcp

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Database_query/mongodb_concepts/: aggregate_data.py  create_sample_dataset.py  describe_collection.py  generate_charts.py  get_collections.py  insert_orders.py  query_orders.py  revenue_analytics.py  search_orders.py  update_orders.py
data/: audit_logs.json  customers.json  delivery_details.json  menu_items.json  orders.json  users.json
frontend/mongo_mcp_frontend/: index.html  package-lock.json  package.json
frontend/mongo_mcp_frontend/src/: App.css  App.js  App.jsx
main/: main.py  requirements.txt
main/api_server/agents/: langgraph_agent.py
main_dir/: .env.example  agent.py  mcp_server.py  requirements.txt  seed_db.py  server.py
main_dir/api_server/: fastapi_server.py
main_dir/api_server/agents/: langgraph_agent.py
main_dir/api_server/helpers/: chart_generator.py
main_dir/mcp_server/models/: __init__.py  data_models.py
main_dir/mcp_server/tools/: __init__.py  generate_chart.py  get_customer_insights.py  get_customer_segments.py  get_data_range.py  get_menu_performance.py  get_menu_revenue.py  get_operational_metrics.py  get_order_status.py  get_order_types.py  get_revenue_analytics.py  get_revenue_by_date.py  mongodb_aggregate.py  mongodb_describe_collection.py  mongodb_get_collections.py  mongodb_insert.py  mongodb_query.py  mongodb_update.py  quick_stats.py  search_orders.py
main_dir/mcp_server/utils/: __init__.py  db_client.py
(+1 files in other folders)
